/cp 2011-12-01  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/51367
	* pt.c (unify_inconsistency): Use either %qT or %qE depending on
	whether parm is a type or non-type parameter.

/cp
2011-12-01  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51367
	* g++.dg/template/error47.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@181876 138bc75d-0d04-0410-961f-82ee72b054a4